fixed spacing of commented in activity

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -333,7 +333,7 @@ body
     font-size: 16pt
     color: #7D7D7D
     letter-spacing: 0.5pt
-    margin-top: 40px
+    margin-top: 30px
     
   h1
     font-size: 18pt
@@ -345,10 +345,9 @@ body
     
     .action
       float: left
-      width: 110px
+      width: 115px
       font-weight: bold
-      font-size: 14pt
-          
+      font-size: 14pt      
     .created
       color: #209123
     
